<resources>
    <string name="HEADER_APP_NAME">Bia SG</string>
    <string name="app_name">Bia SG</string>
    <string name="app_copyright">Copyright ® Viettel</string>
    <string name="app_website">http://viettel.com.vn</string>
    <string name="app_permision_name">Bảo mật broadcast</string>
    <string name="app_permision_info">Quyền gửi nhận thông tin broadcast trong chương trình</string>
    <string name="PLS_INPUT_US_NAME">Vui lòng nhập tên đăng nhập</string>
    <string name="PLS_INPUT_PASSWORD">Vui lòng nhập mật khẩu</string>
    <string name="TEXT_NOTICE_PASS">Để đảm bảo an toàn, KH nên sử dụng mật khẩu mạnh: chiều dài tối thiểu 8 ký tự, gồm chữ, số và ký tự đặc biệt</string>
    <string name="UPDATE">Cập nhật</string>
    <string name="SEND">Gửi</string>
    <string name="MENU">Menu</string>
    <string name="loading">Đang xử lý&#8230;</string>
    <string name="locating">Đang định vị</string>
    <string name="backucking">Đang sao lưu dữ liệu lưu trữ</string>
    <string name="downloading">Đang tải dữ liệu lần đầu</string>
    <string name="APP_DOWNLOADING">Đang tải phiên bản mới</string>
    <string name="downloading_product_info">Đang tải dữ liệu thông tin sản phẩm</string>
    <string name="ERR_APP_DOWNLOAD">Lỗi tải phiên bản mới, vui lòng đăng nhập để thử lại</string>
    <string name="ERR_LOGIN_CONNET_FAIL">Kết nối đến server lỗi</string>
    <string name="updating">Đang cập nhật dữ liệu</string>
    <string name="NOTICE_UPDATE_VERSION">Thông báo có phiên bản mới</string>
    <string name="TEXT_IGNORE_MSG_LATER">Không hiển thị thông báo này lần sau</string>
    <string name="ALL">Tất cả</string>
    <string name="SLGT">SLGT</string>
    <string name="LINE">Tuyến:</string>
    <string name="NO">Không</string>
    <string name="LINE1">Tuyến</string>
    <string name="COMPETITOR_NAME">Tên đối thủ: </string>
    <string name="STATE">Trạng thái</string>
    <string name="TOTAL">Tổng</string>
    <string name="TOTAL_UPPER">TỔNG</string>
    <string name="OF">của</string>
    <string name="ADD_ORDER">Thêm hàng</string>
    <string name="CONTENT">Nội dung</string>
    <string name="QUOTA">Chỉ tiêu</string>
    <string name="ATTAIN">Đạt</string>
    <string name="UN_ATTAIN">Không Đạt</string>
    <string name="TEXT_NOT_ATTAIN">Chưa đạt</string>
    <string name="REMAIN">Còn lại</string>
    <string name="TEXT_NOTE">Ghi chú</string>
    <string name="TEXT_VIEW_ALL">Xem tất cả</string>
    <string name="TEXT_HINT_INPUT_ORDER_CODE">Nhập mã MH</string>
    <string name="TEXT_HINT_INPUT_ORDER_NAME">Nhập tên MH</string>
    <string name="TEXT_BUTTON_FIND">Tìm kiếm</string>
    <string name="TEXT_BUTTON_CREATE_CUSTOMER">Thêm mới</string>
    <string name="TEXT_BUTTON_CLOSE">Đóng</string>
    <string name="TEXT_BUTTON_DELETE">Xóa</string>
    <string name="TEXT_BUTTON_DONE">Đã thực hiện</string>
    <string name="TEXT_BUTTON_CHOOSE">Chọn</string>
    <string name="TEXT_BUTTON_REMOVE_CHOOSE">Bỏ chọn</string>
    <string name="TEXT_BUTTON_SAVE">Lưu</string>
    <string name="TEXT_SAVE_ATTENDANCE">Lưu chấm công</string>
    <string name="TEXT_IGNORE">Bỏ qua</string>
    <string name="TEXT_SAVE_REMAIN">Lưu kiểm tồn</string>
    <string name="TEXT_SAVE_SALE">Lưu kiểm bán</string>
    <string name="TEXT_BUTTON_CLOSE_FIND_PRODUCT">Hủy</string>
    <string name="TEXT_BUTTON_CHOOSE_FIND_PRODUCT">Chấp nhận</string>
    <string name="TEXT_CONFIRM_EXIT">Bạn có muốn thoát khỏi ứng dụng không?</string>
    <string name="TEXT_BEING_LOCATED">Đang định vị</string>
    <string name="TEXT_SYMBOL_PERCENT">%</string>
    <string name="TEXT_CTKM">CTKM</string>
    <string name="TEXT_TIME1">Thời gian: </string>
    <string name="TEXT_LIST">Danh sách\u0020</string>
    <string name="TEXT_CUS_DEBT">Dư nợ</string>
    <string name="TEXT_DAY_NUMBER">Số ngày</string>
    <string name="TEXT_CHOOSE_SHOP_MANAGE">Chọn nhà phân phối cần theo dõi</string>
    <string name="MESSAGE_ERROR_NO_CONNECTION">Không kết nối mạng được</string>
    <string name="MESSAGE_ERROR_HAPPEN">Có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="MESSAGE_ERROR_COMMON">Lỗi trong quá trình xử lý, vui lòng thử lại</string>
    <string name="TEXT_VERSION_INFO_1">Phiên bản\u0020</string>
    <string name="TEXT_VERSION_INFO_2">\u0020cập nhật lúc\u0020</string>
    <string name="MESSAGE_NO_INFOMATION">Không có thông tin</string>
    <string name="MESSAGE_NO_CUSTOMER_INFO">Không có thông tin khách hàng</string>
    <string name="MESSAGE_NO_STAFF_INFO">Không có thông tin nhân viên</string>
    <string name="MESSAGE_CANT_UPDATE_CUS_LOCATION">Chương trình chưa định vị được vị trí khách hàng, vui lòng thực hiện lại định vị hoặc chọn vị trí cho khách hàng</string>
    <string name="SYSTEM_CANNOT_CHECK_YOUR_LOCATION">Chương trình chưa định vị được vị trí của bạn!</string>
    <string name="TEXT_MENU_REPORT">Thống kê chung</string>
    <string name="TEXT_MENU_SALES">Bán hàng</string>
    <string name="TEXT_HTTM">Chương trình HTBH</string>
    <string name="TEXT_LIST_PRODUCT">Danh sách sản phẩm</string>
    <string name="TEXT_STATISTICS">Đơn tổng</string>
    <string name="TEXT_DEBT">Đơn tổng</string>
    <string name="TEXT_PROGRESS_SALE">Tiến độ bán hàng</string>
    <string name="TEXT_ROUTE_MANAGE">Giám sát lộ trình</string>
    <string name="TEXT_GET_INFORMATION">Thu thập dữ liệu</string>
    <string name="TEXT_GET_INFORMATION_SALES">Khảo sát thị trường</string>
    <string name="TEXT_TRAINING_SALEMAN">Huấn luyện NVBH</string>
    <string name="TEXT_CATEGORY">Danh mục</string>
    <string name="TEXT_PROBLEMS_MANAGE">Theo dõi khắc phục</string>
    <string name="TEXT_CUSTOMER_LIST">Danh sách điểm bán</string>
    <string name="TEXT_CLOSE_DOOR">Đóng cửa</string>
    <string name="TEXT_FINISH_VISIT">Kết thúc</string>
    <string name="TEXT_VISITTING">Đang ghé thăm :\u0020</string>
    <string name="TEXT_PASSWORD">Mật khẩu</string>
    <string name="TEXT_ACCOUNT">Tài khoản</string>
    <string name="TEXT_INFO">Thông tin </string>
    <string name="TEXT_PICTURE">Hình ảnh </string>
    <string name="TEXT_FEEDBACK">Góp ý </string>
    <string name="TEXT_POSITION">Vị trí </string>
    <string name="TEXT_BSG">Bia sài gòn</string>
    <string name="TEXT_OPPONENT">Đối thủ</string>
    <string name="TEXT_MONTH">Tháng </string>
    <string name="TEXT_TITLE_MONTH">Tháng:</string>
    <string name="TEXT_SALES_INFO">Thông tin sản lượng </string>
    <string name="TEXT_MSG_CHOOSE_OPTION">Vui lòng đặt tùy chọn\u0020 </string>
    <string name="TEXT_AND">và\u0020 </string>
    <string name="TEXT_FOR_TABLET">\u0020 cho máy tính bảng\u0020</string>
    <string name="MSG_EXECUTING_SYNDATA">Dữ liệu đang được đồng bộ về máy tính bảng, vui lòng không tắt chương trình</string>
    <string name="TEXT_ORDERS_RECENTLY">\u0020đơn hàng gần nhất </string>
    <string name="ERROR_ACCOUNT_LOCKED">Tài khoản đã hết hiệu lực</string>
    <string name="ERROR_ACCOUNT_MAXIMUM_LOCK">Bạn đăng nhập sai quá 5 lần, tài khoản của bạn bị khóa, liên hệ quản trị hệ thống để được hỗ trợ thêm </string>
    <string name="ERROR_INVALID_IMEI">Thiết bị đang sử dụng chưa được khai báo, vui lòng liên hệ hỗ trợ để được hướng dẫn thêm</string>
    <string name="ERROR_INVALID_SERIAL">SIM đang dùng chưa được khai báo, vui lòng liên hệ hỗ trợ để được hướng dẫn thêm</string>
    <string name="ERROR_INVALID_IMEI_OR_SERIAL">Thiết bị hoặc SIM chưa được khai báo, vui lòng liên hệ hỗ trợ để được hướng dẫn thêm</string>
    <string name="ERR_UPDATE_NOT_SUCCESS">Chương trình cập nhật dữ liệu chưa thành công, vui lòng thực hiện lại</string>
    <string name="TEXT_PROGRAME_JOINING">Chương trình đang tham gia </string>
    <string name="TEXT_PHONE_MOBILE">Di động: </string>
    <string name="TEXT_PERSON_REF">Người liên hệ: </string>
    <string name="TEXT_NUM_ORDER_IN_MONTH">Số lần đặt hàng trong tháng: </string>
    <string name="TEXT_AVG_SALES_2_MONTH_AGO">BQ sản lượng 2 tháng trước: </string>
    <string name="TEXT_AVG_SALES_3_MONTH_AGO">Sản lượng 3 tháng gần đây: </string>
    <string name="TEXT_SALES_IN_MONTH">Sản lượng thực hiện trong tháng: </string>
    <string name="TEXT_LIST_ORDERS_RECENTLY">Danh sách đơn hàng gần đây nhất </string>
    <string name="TEXT_CUSTOMER_TYPE">Loại khách hàng: </string>
    <string name="ERR_LOGIN_OFFLINE">Đăng nhập khi không kết nối mạng thất bại</string>
    <string name="ERR_CANT_CREATE_DB">Lỗi tạo cơ sở dữ liệu không thành công</string>
    <string name="ERR_DOWNLOAD_DB">Download dữ liệu lỗi, vui lòng thử lại login</string>
    <string name="ERR_PASSWORD_WRONG">Mật khẩu nhập không chính xác</string>
    <string name="ERR_DB_STRUCTURE">Cấu trúc dữ liệu thay đổi cần cập nhật để tiếp tục, bạn có đồng ý?</string>
    <string name="TEXT_CONFIRM_RELOGIN">Bạn chưa đăng nhập lại đầu ngày để cập nhật dữ liệu, bạn cần thực hiện đăng nhập lại đầu ngày.</string>
    <string name="TEXT_CONFIRM_RELOGIN_TO_RESET_DB">Chương trình cần tải lại dữ liệu mới, bạn phải đăng nhập lại để tải dữ liệu mới.</string>
    <string name="TEXT_CONFIRM_RESET_DB">Chương trình cần tải lại dữ liệu mới, bạn có muốn tải ngay lúc này?</string>
    <string name="TEXT_ORDER_CODE">Mã mặt hàng:</string>
    <string name="TEXT_COLUM_ORDER_CODE">Mã mặt hàng</string>
    <string name="TEXT_COLUM_ORDER_SHORT_CODE">Mã MH</string>
    <string name="TEXT_ORDER_NAME">Tên mặt hàng:</string>
    <string name="TEXT_COLUM_ORDER_NAME">Tên mặt hàng</string>
    <string name="TEXT_COLUM_ORDER_FROM_NPP">Số liệu mua từ NPP</string>
    <string name="TEXT_COLUM_PRICE">Đơn giá</string>
    <string name="TEXT_COLUM_INVENTORY">Tồn kho</string>
    <string name="TEXT_STT">STT</string>
    <string name="TEXT_SL_DONE">Sản lượng thực hiện</string>
    <string name="TEXT_CUSTOMER">Khách hàng</string>
    <string name="TEXT_HINT_INPUT_CUSTOMER">Nhập tên hoặc địa chỉ KH</string>
    <string name="TEXT_HINT_INPUT_CUSTOMER_IMAGE">Nhập mã, tên hoặc địa chỉ KH</string>
    <string name="TEXT_HINT_INPUT_CUSTOMER_SDT">Nhập mã, tên hoặc SĐT…</string>
    <string name="TEXT_ORDER_ITEM_CODE">Mã đơn hàng:</string>
    <string name="TEXT_ORDER_ITEM_DATE">Ngày đặt hàng:</string>
    <string name="TEXT_ORDER_CUSTOMER">Tên khách hàng</string>
    <string name="TEXT_TOTAL_MONEY_COLON">Tổng tiền:</string>
    <string name="TEXT_PRODUCT_CODE">Mã hàng:</string>
    <string name="TEXT_HEADER_PRODUCT_CODE">Mã hàng</string>
    <string name="TEXT_HEADER_PRODUCT_INDUSTRY">NH</string>
    <string name="TEXT_HEADER_TYPE_FORCUS_PRODUCT">Loại MHTT</string>
    <string name="TEXT_PRODUCT_NAME">Tên hàng:</string>
    <string name="TEXT_NUMBER_PRODUCT">Số lượng</string>
    <string name="TEXT_NUMBER_PRODUCT_SOLD">Đã bán</string>
    <string name="TEXT_PROMOTION_CODE">Mã CT:</string>
    <string name="TEXT_PROMOTION_NAME">Tên CT:</string>
    <string name="TEXT_CTTB_START">Từ ngày</string>
    <string name="TEXT_CTTB_END">Đến ngày</string>
    <string name="TEXT_CTTB_DEPART">Ngành hàng</string>
    <string name="TEXT_TB_CUSTOMER_CODE">Mã KH</string>
    <string name="TEXT_TB_CUSTOMER_NAME">Tên khách hàng</string>
    <string name="TEXT_TB_CUSTOMER_LEVEL">Mức tham gia</string>
    <string name="TEXT_TB_CUSTOMER_SALES_REMAIN">DS còn lại</string>
    <string name="TEXT_TIME">Thời gian</string>
    <string name="TEXT_HEADER_TABLE_PLAN">Kế hoạch</string>
    <string name="TEXT_HEADER_TABLE_DONE">Thực hiện</string>
    <string name="TEXT_HEADER_TABLE_PROGRESS">Tiến độ</string>
    <string name="TEXT_HEADER_TABLE_REMAIN">Còn lại</string>
    <string name="TEXT_PRODUCT_CONVFACT">Quy cách </string>
    <string name="TEXT_ADDRESS">Địa chỉ</string>
    <string name="TEXT_LABLE_PRODUCT_INDUSTRY_2">Ngành</string>
    <string name="TEXT_HEADER_TABLE_FIRST_DAY">Đầu ngày</string>
    <string name="TEXT_HEADER_TABLE_ADD_ORDER">Đặt thêm</string>
    <string name="TEXT_HEADER_TABLE_TOTAL_AMOUNT_SALE">Tổng tiền đã bán</string>
    <string name="TEXT_COLUM_AMOUNT_LAST_MONTH">DS tháng trước</string>
    <string name="TEXT_COLUM_DATE_LAST_ORDER">Ngày ĐH cuối</string>
</resources>