<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row" android:minHeight="35dp"
    android:background="@color/TABLE_BG"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!-- android:background="@color/TABLE_BG" > -->

    <TextView
        android:id="@+id/tvStt"
        style="@style/TextViewVinamilkTable"
        android:layout_width="45dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/TEXT_STT"/>
        
    <TextView
        android:id="@+id/tvMaKh"
        style="@style/TextViewVinamilkTable"
        android:layout_width="90dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/TEXT_TB_CUSTOMER_CODE"
        android:textColor="@color/COLOR_USER_NAME" />

    <TextView
        android:id="@+id/tvTenKh"
        style="@style/TextViewVinamilkTable"
        android:layout_width="200dip"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dip"
        android:text="@string/TEXT_ORDER_CUSTOMER" />

    <TextView
        android:id="@+id/tvDiaChi"
        style="@style/TextViewVinamilkTable"
        android:layout_width="255dip"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dip"
        android:text="@string/TEXT_ADDRESS" />


    <TextView
        android:id="@+id/tvTuyen"
        style="@style/TextViewVinamilkTable"
        android:layout_width="160dip"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dip"
        android:text="@string/LINE1" />

    <TextView
        android:id="@+id/tvSlgt"
        style="@style/TextViewVinamilkTable"
        android:layout_width="70dip"
        android:layout_height="fill_parent"
        android:gravity="center"        
        android:text="@string/SLGT" />
    
    <TextView
        android:id="@+id/tvDsThangTruoc"
        style="@style/TextViewVinamilkTable"
        android:layout_width="110dip"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:paddingRight="10dip"
        android:text="@string/TEXT_COLUM_AMOUNT_LAST_MONTH" />

    <TextView
        android:id="@+id/tvNgayDhCuoi"
        style="@style/TextViewVinamilkTable"
        android:layout_width="120dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/TEXT_COLUM_DATE_LAST_ORDER" />    
</TableRow>