<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/TABLE_BG"
    android:minHeight="@dimen/min_height_of_row" >

    <TextView
        android:id="@+id/tvSTT"
        style="@style/TextViewVinamilkTable"
        android:layout_width="45dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_STT"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvProductCode"
        style="@style/TextViewVinamilkTable"
        android:layout_width="130dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_PRODUCT_CODE"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvProductName"
        style="@style/TextViewVinamilkTable"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_PRODUCT_NAME"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvIndustryProduct"
        style="@style/TextViewVinamilkTable"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_HEADER_PRODUCT_INDUSTRY"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvPrice"
        style="@style/TextViewVinamilkTable"
        android:layout_width="90dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_COLUM_PRICE"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvNumRemainFirstDay"
        style="@style/TextViewVinamilkTable"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_HEADER_TABLE_FIRST_DAY"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvNumSold"
        style="@style/TextViewVinamilkTable"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_NUMBER_PRODUCT_SOLD"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvRemain"
        style="@style/TextViewVinamilkTable"
        android:layout_width="76dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_HEADER_TABLE_REMAIN"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvAddOrder"
        style="@style/TextViewVinamilkTable"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_HEADER_TABLE_ADD_ORDER"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/tvTotalAmount"
        style="@style/TextViewVinamilkTable"
        android:layout_width="96dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_HEADER_TABLE_TOTAL_AMOUNT_SALE"
        android:textColor="@color/BLACK" />

</TableRow>