<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/min_height_of_row"
    android:background="@color/TABLE_BG" >

    <TextView
        android:id="@+id/tvSTT"
        style="@style/TextViewVinamilkTable"
        android:layout_width="45dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_STT"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvProductCode"
        style="@style/TextViewVinamilkTable"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_PRODUCT_CODE"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvProductName"
        style="@style/TextViewVinamilkTable"
        android:layout_width="210dp"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_PRODUCT_NAME"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvIndustryProduct"
        style="@style/TextViewVinamilkTable"
        android:layout_width="45dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_LABLE_PRODUCT_INDUSTRY_2"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvConvfact"
        style="@style/TextViewVinamilkTable"
        android:layout_width="123dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_PRODUCT_CONVFACT"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvPrice"
        style="@style/TextViewVinamilkTable"
        android:layout_width="140dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_COLUM_PRICE"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvNumberProduct"
        style="@style/TextViewVinamilkTable"
        android:layout_width="135dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_NUMBER_PRODUCT"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvTotalAmount"
        style="@style/TextViewVinamilkTable"
        android:layout_width="140dp"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:text="@string/TEXT_TOTAL_MONEY_COLON"
        android:textColor="@color/BLACK" />
    <TextView
        android:id="@+id/tvNotifyNull"
        style="@style/TextViewVinamilkTable"
        android:layout_width="952dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height_of_row"
        android:padding="@dimen/padding"
        android:textColor="@color/BLACK"
        android:visibility="gone" />

</TableRow>